<resources>
    <string name="app_name">QR Emergencias</string>
    <string name="login">Loguearse</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="surname">Apellido</string>
    <string name="id">DNI</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="blood_type">Tipo de sangre</string>
    <string name="age">Edad</string>
    <string name="allergy">Alergia</string>
    <string name="allergies">Alergias</string>
    <string name="pathology">Patología</string>
    <string name="pathologies">Patologías</string>
    <string name="sex">Sexo</string>
    <string name="contact">Contacto</string>
    <string name="contacts">Contactos de emergencia</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="last_medical_check">Último chequeo médico</string>
    <string name="organ_donor">Donante de órganos</string>
    <string name="surgery">Operación</string>
    <string name="surgeries">Operaciones</string>
    <string name="hospitalization">Internación</string>
    <string name="hospitalizations">Internaciones</string>
    <string name="institution">Institución</string>
    <string name="type">Tipo</string>
    <string name="date">Fecha</string>
    <string name="reason">Motivo</string>
    <string name="description">Descripción</string>
    <string name="medication">Medicación</string>
    <string name="medications">Medicaciones</string>
    <string name="amount">Cantidad</string>
    <string name="period">Período</string>
    <string name="basic_data">Información básica</string>
    <string name="x_years">{0} años</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="male">Masculino</string>
    <string name="female">Femenino</string>
    <string name="other">Otro</string>
    <string name="load">Cargar</string>
    <string name="save">Guardar cambios</string>
    <string name="edit">Modificar</string>
    <string name="delete">Eliminar</string>

    <string name="delete_confirmation">¿Desea eliminar este elemento?</string>

    <string name="add_contact">Agregar contacto de emergencia</string>
    <string name="load_image">Cargar imagen</string>
    <string name="load_image_from_camera">Sacar una foto con la cámara</string>
    <string name="load_image_from_gallery">Elegir imagen de la galería</string>
    <string name="required_field">Debe completar este campo</string>
    <string name="required_mail">Debe ingresar un e-mail válido</string>
    <string name="required_valid_date">Debe ingresar una fecha válida</string>

    <string name="menu_medical_profile">Perfil</string>
    <string name="menu_medical_emergency_data">Leer Datos de Emergencia</string>
    <string name="menu_medical_edit_user">Editar Paciente</string>
    <string name="menu_user_profile">Perfil</string>
    <string name="menu_user_manage_qr">Gestionar QR</string>
    <string name="menu_user_clinical_history">Historia Clínica</string>
    <string name="menu_user_emergency_data">Datos Emergencia</string>
    <string name="menu_logout">Cerrar Sesión</string>
    <string name="home_menu">Accedé al menú para ver las opciones disponibles</string>
    <string name="scan">Escanear</string>
    <string name="see_more">Ver más</string>
    <string name="emergency_data_title">Datos de Emergencia</string>
    <string name="see_more_title">Más información</string>
    <string name="cannot_load_data">No se pudo cargar la información</string>
    <string name="medical_home">Seleccioná la opción deseada desde el menú</string>
    <string name="medical_welcome">Bienvenido</string>
    <string name="not_loaded">No cargado</string>
    <string name="btn_qr">QR</string>
    <string name="signed_qr">QR FIRMADO</string>
    <string name="menu_user_signed_qr">QR Firmado</string>
    <string name="generate_qr">Generar QR</string>
    <string name="delete_qr">Deprecar QR</string>
    <string name="user_qr">QR del paciente</string>
    <string name="signed_qr_desc">QR Firmado</string>
    <string name="add_history">Crear historia</string>
    <string name="record_name">Estudio</string>
    <string name="record_date">Fecha del informe</string>
    <string name="record_text">Texto del informe</string>
    <string name="load_image_success">Imagen cargada correctamente</string>
    <string name="load_image_error">No se pudo cargar la imagen</string>
    <string name="load_history_error">No se pudo cargar la historia</string>
    <string name="required_fields_error">Debe completar todos los datos</string>
    <string name="login_error">El email y/o password ingresados son inválidos</string>
    <string name="save_profile_success">El perfil fue guardado correctamente</string>
    <string name="save_profile_error">Ocurrió un error al guardar el perfil</string>
    <string name="save_data_success">Los datos de emergencia fueron guardados correctamente</string>
    <string name="save_data_error">Ocurrió un error al guardar los datos de emergencia</string>
    <string name="primary_contacts_error">Error, debe tener un único contacto primario</string>
    <string name="file_history_missing">Debe cargar una imagen</string>
    <string name="widget_update">Actualizar</string>
    <string name="icon_medicalrecord">Icono MedicalRecord</string>
    <string name="send">Enviar</string>
    <string name="forgot_intro">Por favor, ingresá tu email y te informaremos los pasos a seguir</string>
    <string name="delete_medical_record_text">Borrar</string>
    <string name="load_history_success">Carga exitosa!</string>

    <string-array name="hospitalization_type">
        <item>CIRUGIA</item>
        <item>ADMISION</item>
    </string-array>

    <string-array name="pathology_type">
        <item>ASMA</item>
        <item>HIPERTENSION</item>
        <item>ANTECEDENTES_ONCOLOGICOS</item>
        <item>INSUFICIENCIA_SUPRARRENAL</item>
        <item>OTRO</item>
    </string-array>

    <string-array name="periods">
        <item>DIARIAMENTE</item>
        <item>SEMANALMENTE</item>
        <item>MENSUALMENTE</item>
    </string-array>

</resources>