<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_medical_profile"
                android:textSize="24sp"
                android:textColor="@color/black"/>

            <!--  Name Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <!--  Surname Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/surname"
                    android:inputType="textPersonName" />

            </android.support.design.widget.TextInputLayout>

            <!--  ID Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/id"
                    android:inputType="number" />

            </android.support.design.widget.TextInputLayout>

            <!--  Birthday Label -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/input_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/birthday"
                    android:focusable="false"
                    android:enabled="true"/>

            </android.support.design.widget.TextInputLayout>

            <!-- Gender -->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <RadioGroup
                android:id="@+id/input_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <RadioButton android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>

                <RadioButton android:id="@+id/other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"/>

            </RadioGroup>

            <!-- Contacts -->

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:text="@string/contacts"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="none"/>

            <Button
                android:id="@+id/btn_add_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/add_contact"
                android:theme="@style/AppTheme.Button" />

            <!-- Save changes -->

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/save"
                android:theme="@style/AppTheme.Button" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>