<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!-- Institution -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/institution"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_hospital_grey600_24dp"
        app:title="@string/institution"/>

    <!-- Type -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_triangle_grey600_24dp"
        app:title="@string/type"/>

    <!-- Date -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_calendar_clock_grey600_24dp"
        app:title="@string/date" />

    <!-- Reason -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_information_outline_grey600_24dp"
        app:title="@string/reason" />

</LinearLayout>