<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Name -->

        <com.qre.ui.components.DetailValueView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pill_grey600_24dp"
            app:title="@string/name"/>

        <!-- Description -->

        <com.qre.ui.components.DetailValueView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_information_outline_grey600_24dp"
            app:title="@string/description" />

        <!-- Amount -->

        <com.qre.ui.components.DetailValueView
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_clipboard_text_grey600_24dp"
            app:title="@string/amount" />

        <!-- Period -->

        <com.qre.ui.components.DetailValueView
            android:id="@+id/period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_calendar_clock_grey600_24dp"
            app:title="@string/period" />

        <!-- Actions -->

        <LinearLayout
            android:id="@+id/actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/btn_delete"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/btn_edit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:textColor="@color/primary"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>