<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="8dp">

    <!-- Name -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_account_grey600_24dp"
        app:title="@string/name"
        app:value="@string/app_name" />

    <!-- Phone -->

    <com.qre.ui.components.DetailValueView
        android:id="@+id/contact_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_phone_grey600_24dp"
        app:title="@string/phone"
        app:value="@string/app_name" />

</LinearLayout>