<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!--  Name Label -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <!--  Description Label -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

    <!--  Amount Label -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/amount"
            android:inputType="number" />

    </android.support.design.widget.TextInputLayout>

    <!--  Period Label -->

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/input_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/period"
            android:inputType="textCapSentences" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>